styles.css
body {
  max-width: 37em;
  font-size: 19px;
  line-height: 1.4;
  margin: 0 auto;
}

.title {
  margin: 25vh 0;
}

h2 {
  margin-top: 3rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
}

h3 {
  margin-bottom: 0.5rem;
  margin-top: 2rem;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  font-family: sans-serif;
  font-size: 1.2rem;
}

h4 {
  margin-bottom: 0.5rem;
  margin-top: 1rem;
  font-family: sans-serif;
  text-transform: uppercase;
  font-size: 1rem;
  letter-spacing: 0.05em;
}

p {
  margin: 0;
}

p + p {
  margin-top: 1rem;
}

blockquote,
q {
  font-style: italic;
}

a {
  color: #9b0707;
  letter-spacing: 0.01em;
  font-style: italic;
  text-decoration: none;
}

nav a {
  font-style: normal;
}

a:hover,
a:focus {
  text-decoration: underline;
}

ul {
  margin: 1rem 0 2rem;
}

ul ul {
  margin: 0;
}

/* Below this line is legacy code from the previous version */

.title  { text-align: center; }
.todo   { font-family: monospace; color: red; }
.done   { color: green; }
.tag    { background-color: #eee; font-family: monospace;
          padding: 2px; font-size: 80%; font-weight: normal; }
.timestamp { color: #bebebe; }
.timestamp-kwd { color: #5f9ea0; }
.right  { margin-left: auto; margin-right: 0px;  text-align: right; }
.left   { margin-left: 0px;  margin-right: auto; text-align: left; }
.center { margin-left: auto; margin-right: auto; text-align: center; }
.underline { text-decoration: underline; }
#postamble p, #preamble p { font-size: 90%; margin: .2em; }
p.verse { margin-left: 3%; }
pre {
  border: 1px solid #ccc;
  box-shadow: 3px 3px 3px #eee;
  padding: 8pt;
  font-family: monospace;
  overflow: auto;
  margin: 1.2em;
}
pre.src {
  position: relative;
  overflow: visible;
  padding-top: 1.2em;
}
pre.src:before {
  display: none;
  position: absolute;
  background-color: white;
  top: -10px;
  right: 10px;
  padding: 3px;
  border: 1px solid black;
}
pre.src:hover:before { display: inline;}
pre.src-sh:before    { content: 'sh'; }
pre.src-bash:before  { content: 'sh'; }
pre.src-emacs-lisp:before { content: 'Emacs Lisp'; }
pre.src-R:before     { content: 'R'; }
pre.src-perl:before  { content: 'Perl'; }
pre.src-java:before  { content: 'Java'; }
pre.src-sql:before   { content: 'SQL'; }

table { border-collapse:collapse; }
caption.t-above { caption-side: top; }
caption.t-bottom { caption-side: bottom; }
td, th { vertical-align:top;  }
th.right  { text-align: center;  }
th.left   { text-align: center;   }
th.center { text-align: center; }
td.right  { text-align: right;  }
td.left   { text-align: left;   }
td.center { text-align: center; }
dt { font-weight: bold; }
.footpara:nth-child(2) { display: inline; }
.footpara { display: block; }
.footdef  { margin-bottom: 1em; }
.figure { padding: 1em; }
.figure p { text-align: center; }
.inlinetask {
  padding: 10px;
  border: 2px solid gray;
  margin: 10px;
  background: #ffffcc;
}
#org-div-home-and-up
  { text-align: right; font-size: 70%; white-space: nowrap; }
textarea { overflow-x: auto; }
.linenr { font-size: smaller }
.code-highlighted { background-color: #ffff00; }
.org-info-js_info-navigation { border-style: none; }
#org-info-js_console-label
  { font-size: 10px; font-weight: bold; white-space: nowrap; }
.org-info-js_search-highlight
  { background-color: #ffff00; color: #000000; font-weight: bold; }

